<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_with_colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serial_port_colon" />

        <com.sscl.baselibrary.view.ReSpinner
            android:id="@+id/serial_port_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_with_colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baud_rate_colon" />

        <com.sscl.baselibrary.view.ReSpinner
            android:id="@+id/baud_rate_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:visibility="gone"
            android:id="@+id/null_serial_port"
            android:text="@string/_null"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/open_serial_port_btn"
            android:text="@string/open_serial_port"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/close_serial_port_btn"
            android:text="@string/close_serial_port"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <View
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sender_area"
                android:textSize="@dimen/text_size" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/send_data_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_with_colon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/command_colon" />

            <EditText
                android:id="@+id/command_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/edit_text" />

            <Button
                android:textColor="@android:color/black"
                android:id="@+id/send_cmd_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receiving_area"
                android:textSize="@dimen/text_size" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/received_data_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>